--- a/templates/login.html
+++ b/templates/login.html
@@ -9,11 +9,11 @@
         <form method="POST" action="{{ url_for('login') }}">
             <div class="mb-3">
                 <label for="username" class="form-label">Username:</label>
-                <input type="text" class="form-control" id="username" name="username" required>
+                <input type="text" class="form-control" id="username" name="username" placeholder="Enter Username">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password:</label>
-                <input type="password" class="form-control" id="password" name="password" required>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password">
             </div>
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <button type="submit" class="btn btn-warning w-100" style="font-size: 1.1rem; padding: 10px;">Login</button>
