--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -36,7 +36,7 @@
 
                         <!-- Product Price -->
                         <div class="mb-4">
-                            <label for="price" class="form-label">Price (USD):</label>
+                            <label for="price" class="form-label">Price (MWK):</label>
                             <input 
                                 type="number" 
                                 id="price" 
