--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -98,7 +98,7 @@
             return;
         }
 
-        window.location.href = 'https://www.facebook.com/messages/t/YourFacebookPageID';
+        window.location.href = 'https://m.me/choiceovilera.kunthani';
     });
 </script>
 
